@@ -1,5 +1,7 @@
 {{$NEXT}}
 
+    - Let TAP render generic events
+    - Add the no_display method to the Event API
     - Improve T2_FORMATTER parsing
 
 0.000041  2016-04-13 20:21:38-07:00 America/Los_Angeles
